--- a/styles.css
+++ b/styles.css
@@ -6,43 +6,46 @@ body {
     text-align: left;
     font-size: 1.5em; 
     margin: 50px;
-    background-color: #2c3e50; /* Dark Background Color */
-    color: #ecf0f1; /* Light Text Color */
+    background-color: #f9f8f5; /* Dark Background Color */
+    color: #383A42;
     
 }
 
 
 label {
-    color: #ecf0f1; /* Light Text Color */
+   margin-right: 3px;
+   margin-left: 3px;
 }
 
 select, input {
-    background-color: #34495e; /* Dark Input Background Color */
-    color: #ecf0f1; /* Light Text Color */
-    border: 1px solid #3498db; /* Blue Border Color */
+   
+    border: 1px solid; /* Blue Border Color */
     padding: 5px;
+    background: #d5dbdd;
+    font-size: 0.68em;
 }
 
 select {margin: 10px;}
 
 button {
-    background-color: #3498db; /* Blue Button Color */
-    color: #ecf0f1; /* Light Text Color */
-    padding: 10px;
+    
+    padding: 7px;
     border: none;
     cursor: pointer;
     width: 100px;
     margin: 10px;
+    font-size: 0.7em;
+    background: #cfd0d1;
 }
 
 #rh, #useScale {width: 200px;}
 
 button:hover {
-    background-color: #2980b9; /* Darker Blue Hover Color */
+   background: #a1a1a1;
 }
 
 #chordNames {
-    color: #94cdf3; /* Blue Text Color */
+    
 }
 
 .container {
@@ -75,7 +78,7 @@ button:hover {
 }
 
 .header {
-     color:#b5bfe2;
+     
      margin-top: 10px; /* Adjust the top margin as needed */
      margin-bottom: 10px; /* Adjust the bottom margin as needed */
 }
@@ -98,12 +101,12 @@ button:hover {
   }
 
 .result1 {
-    color: #eeb091;
+    
     font-size: 1.1em;
 }
 
 .white-bold {
-    color: white;
+    color: rgb(117, 126, 65);
     font-weight: bold;
   }
   
