--- a/styles.css
+++ b/styles.css
@@ -109,4 +109,9 @@ button:hover {
     color: rgb(117, 126, 65);
     font-weight: bold;
   }
-  
+.bottom-left-image {
+
+    width: 150px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    margin: 10px;
+}
