--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
-       
-          <img src="/assets/img/logo.png" alt="Logo" />
-       
+        {% if site.logo %}
+          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
