--- a/styles-2.css
+++ b/styles-2.css
@@ -15,20 +15,20 @@ body {
 .container {
     text-align: center;
     padding: 20px;
-    border: 2px solid #D9D9D9;
+    /*border: 2px solid #D9D9D9;*/
     /* Black border with 2px width */
-
+    width: 358px;
 }
 
 /* Element Styles */
 label {
     /*font-size: ; */
-    color: #D9B384;
+    /*color: #D9D9D9;*/
 }
 
 input[type="number"] {
     background-color: #735840;
-    color: #D9D9D9;
+    /*color: #D9D9D9;*/
     border: 1px solid #D9B384;
     border-radius: 4px;
     padding: 5px;
@@ -41,7 +41,7 @@ input[type="checkbox"] {
 
 select {
     background-color: #735840;
-    color: #D9D9D9;
+    /*color: #D9D9D9;*/
     border: 1px solid #D9B384;
     border-radius: 4px;
     padding: 5px;
@@ -64,6 +64,16 @@ button {
 
 button:hover {
     background-color: #A6A6A6;
+}
+
+.result1 {
+    text-align: left;
+    font-family: monospace;
+    font-size: 1.2em;
+}
+
+.left-align {
+    text-align: left;
 }
 
 #result {
@@ -116,6 +126,10 @@ input[type="checkbox"] {
 @media (max-width: 425px) {
     body {
         display: block;
+    }
+
+    .container {
+        width: unset;
     }
 
     button.button {
