--- a/styles-2.css
+++ b/styles-2.css
@@ -28,7 +28,7 @@ label {
 
 input[type="number"] {
     background-color: #735840;
-    /*color: #D9D9D9;*/
+    color: #D9D9D9;
     border: 1px solid #D9B384;
     border-radius: 4px;
     padding: 5px;
@@ -41,7 +41,7 @@ input[type="checkbox"] {
 
 select {
     background-color: #735840;
-    /*color: #D9D9D9;*/
+    color: #D9D9D9;
     border: 1px solid #D9B384;
     border-radius: 4px;
     padding: 5px;
