text color change

--- a/styles-2.css
+++ b/styles-2.css
@@ -1,7 +1,7 @@
 /* Base styles */
 body {
     background-color: #262626;
-    color: #D9D9D9;
+    color: #f6bfbf;
     font-family: 'Arial', sans-serif;
     font-size: 1.2em;
     margin: 0;
@@ -28,7 +28,7 @@ label {
 
 input[type="number"] {
     background-color: #735840;
-    color: #D9D9D9;
+    color: inherit;
     border: 1px solid #D9B384;
     border-radius: 4px;
     padding: 5px;
@@ -41,7 +41,7 @@ input[type="checkbox"] {
 
 select {
     background-color: #735840;
-    color: #D9D9D9;
+    color: inherit;
     border: 1px solid #D9B384;
     border-radius: 4px;
     padding: 5px;
