--- a/pages/styles-2.css
+++ b/pages/styles-2.css
@@ -6,18 +6,29 @@ body {
     font-size: 1.2em;
     margin: 0;
     padding: 0;
-    display: flex;
     gap: 10px;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     min-height: 100vh;
 }
 
 .container {
+
     text-align: center;
     padding: 20px;
     /*border: 2px solid #D9D9D9;*/
     /* Black border with 2px width */
     width: 358px;
+}
+
+#all {
+    display: flex;
+    flex-wrap: wrap;
+    /*border: 2px solid #7fa9ec;*/
+    /* Centers the items horizontally */
+    align-items: flex-start;
+    /* Aligns the items to the top */
 }
 
 input[type="number"] {
@@ -106,15 +117,32 @@ button:hover {
     font-weight: bold;
 }
 
+a {
+    color: #7fa9ec;
+}
+
+#back {
+    width: 100%;
+    box-sizing: border-box;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+
+
 /* Media query for smaller screens */
-@media (max-width: 768px) {
+@media (max-width: 800px) {
     .container {
         padding: 10px;
+        width: 80%;
+    }
+
+    #all {
+        justify-content: center;
     }
 
     input[type="number"],
     button.button {
-
         padding: 10px;
     }
 
@@ -128,7 +156,12 @@ button:hover {
     }
 
     .container {
-        width: unset;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    #all {
+        justify-content: center;
     }
 
     button.button {
