--- a/index-midnight.css
+++ b/index-midnight.css
@@ -4,7 +4,7 @@ body {
     background-attachment: fixed !important;
     background: linear-gradient(#2a2a29, #1c1c1c);
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
 
 }
 
