--- a/index-midnight.css
+++ b/index-midnight.css
@@ -1,6 +1,8 @@
 body {
     color: #f0e7d5;
     background: #252525;
+	font-family: 'Arial', sans-serif;
+    font-size: 1.2em;
     background-attachment: fixed !important;
     background: linear-gradient(#2a2a29, #1c1c1c);
     display: flex;
